objects/Status_Time_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time_Display__c</fullName>
        <label>End Date Time Display</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Status Time Tracker</relationshipLabel>
        <relationshipName>Status_Time_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Status_Time_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_ID__c</fullName>
        <label>Status ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Status Time Tracker</relationshipLabel>
        <relationshipName>Status_Time_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Taken_in_Hours__c</fullName>
        <formula>Time_Taken_in_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Taken in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Taken_in_Seconds__c</fullName>
        <label>Time Taken in Seconds</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Duration__c</fullName>
        <formula>TEXT(FLOOR(  Time_Taken_in_Seconds__c  /3600)) + &quot;:&quot; + TEXT( FLOOR(MOD(Time_Taken_in_Seconds__c,3600)/60)) + &quot;:&quot; + TEXT(MOD(MOD(Time_Taken_in_Seconds__c,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Duration</label>
        <type>Text</type>
    </fields>
    <label>Status Time Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>End_Date_Time_Display__c</columns>
        <columns>Time_Taken_in_Hours__c</columns>
        <columns>Time_Taken_in_Seconds__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Status Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Time Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>